--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" type="text/css" href="fonts/streamline-small/styles.css">
+    <link rel="stylesheet" type="text/css" href="fonts/streamline-large/styles.css">
+    <link rel="stylesheet" type="text/css" href="fonts/template/styles.css">
+    <link rel="stylesheet" type="text/css" href="fonts/social/styles.css">
+
   </head>
 
   <body>
@@ -73,7 +79,7 @@
       <section class="text_h1">
         <div class="text">
           <h1>Professional tiling and painting</h1>
-          <p>
+          <p class="p_1">
             We have the experience, personel and resources to make the project
             run smoothly. We can ensure a job is done on time
           </p>
@@ -88,7 +94,7 @@
       <section class="services">
         <div class="paragraf_1">
           <h2><a href="#Our Services"  >Our Services</a></h2>
-          <p>
+          <p class="p_1">
             With over 15 years experience and real focus on customer
             satisfaction, you can rely on us for your next renovation, driveway
             sett or home repair. We provide a professional service for private
@@ -137,7 +143,7 @@
       <section class="projects">
         <div>
           <h2><a href="#Recent Projects">Recent Projects</a></h2>
-          <p>
+          <p class="p_1">
             Here are a few of many projects we have completed for our customers.
             We provide a professional service.which includes consultation, free
             estimate, design, supply of materials and installation.
@@ -148,23 +154,30 @@
           <ul>
             <li>
               <img src="img/samples/270x180/image_01.jpg">
-              <!--<p>Design and build</p>
-              <a href="#Viuw Project">View project</a>-->
+              <div>
+              <p>Design and build</p>
+              <a href="#Viuw Project" class="button">View project</a>
+              </div>  
             </li>
             <li>
               <img src="img/samples/270x180/image_02.jpg">
-              <!--<p>Garden renovation</p>
-              <a href="#Viuw Project" >View project</a>-->
+              <div>
+              <p>Garden renovation</p>
+              <a href="#Viuw Project" class="button">View project</a>
+              </div>
             </li>
             <li>
               <img src="img/samples/270x180/image_03.jpg">
-              <!--<p>Interior renovation</p>
-              <a href="#Viuw Project" >View project</a>-->
+              <div>
+                <p>Interior renovation</p>
+                <a href="#Viuw Project" class="button">View project</a>
+              </div>
             </li>
             <li>
               <img src="img/samples/270x180/image_04.jpg">
-              <!--<p>Solar systems</p>
-              <a href="#Viuw Project"  class="button">View project</a>-->
+              <div><p>Solar systems</p>
+              <a href="#Viuw Project"  class="button">View project</a>
+              </div>
             </li>
           </ul>
         </div>
@@ -181,7 +194,7 @@
       <section class="about_us">
         <div>
           <h2><a href="#About us">About us</a></h2>
-          <p>
+          <p class="p_1">
             Here are a few of many projects we have completed for our customers.
             We provide a professional service.which includes consultation, free
             estimate, design, supply of materials and installation.
@@ -189,9 +202,9 @@
         </div>
         <div class="img_h4">
         <img src="img/samples/480x480/image_10.jpg"/>
-        <ul>
-          <li>
-            <img src="img/casca.png" />
+        <ul class="about_us_right">
+          <li class="sl-large-helmet">
+            <div class="p_largeur">
             <h4>
               <a href="#OVER 15 YEARS EXPERIENCE">OVER 15 YEARS EXPERIENCE</a>
             </h4>
@@ -199,17 +212,19 @@
               We combine quality workmanship, superior knowledge and low prices
               to provide you with service unmatched by our competitors.
             </p>
+          </div>
           </li>
-          <li>
-            <img src="img/rulou.png" />
+          <li class="sl-large-roller">
+            <div class="p_largeur">
             <h4><a href="#BEST MATERIALS">BEST MATERIALS</a></h4>
             <p>
               We have the experience, personel and resources to make the project
               run smoothly. We can ensure a job is done on time.
             </p>
+          </div>
           </li>
-          <li>
-            <img src="img/dreli.png" />
+          <li class="sl-large-driller ">
+            <div class="p_largeur">
             <h4>
               <a href="#PROFESSIONAL STANDARTS">PROFESSIONAL STANDARTS</a>
             </h4>
@@ -217,6 +232,7 @@
               Work with us involve a carefully planned series of steps, centered
               around a schedule we stick to and daily communication.
             </p>
+          </div>
           </li>
         </ul>
       </div>
@@ -228,43 +244,62 @@
 
 
       <section class="our_benefits">
+        <div class="largeur">
         <ul>
-          <li>
-            <p>e</p>
-            <a href="#We offer" title="We offer" class="we_offer">We offer</a>
+          <li class="sl-large-bubble-check">
+            <a href="#We offer" title="We offer" >We offer</a>
           </li>
-          <li>
-            <a href="#We Guarantee" title="We Guarantee" class="We Guarantee"
-              >We Guarantee</a
-            >
+          <li class="sl-large-shield">
+            <a href="#We Guarantee" title="We Guarantee">We Guarantee</a>
           </li>
-          <li>
-            <a href="#We Provide" title="We Provide" class="We Provide"
-              >We Provide</a
-            >
+          <li class="sl-large-truck">
+            <a href="#We Provide" title="We Provide" >We Provide</a>
           </li>
         </ul>
+        <div class="our_benefits_text">
         <h4>Our Services</h4>
-        <p>
+        <p> 
           Paetos dignissim at cursus elefeind norma arcu. Pellentesque accumsan
           est in tempus etos ullamcorper, sem quam suscipit lacus maecenas
           tortor. Erates vitae node metus. Suspendisse gravida ornare non mattis
           velit rutrum modest. Morbi suspendisse a tortor velim pellentesque
           uter justo magna gravida.
         </p>
+        </div>
+      </div>
       </section>
 
-      <section>
+      <section class="renovate">
         <div>
           <h2><a href="#Choose Renovate">Choose Renovate</a></h2>
-          <p>
+          <p class="p_1">
             Founded by Kevin Smith back in 2000, Renovate has established itself
             as one of the greatest and prestigious providers of construction
             focused interior renovation services and building.
           </p>
         </div>
         <ul>
-          <li></li>
+          <li >
+            <div class="sl-large-house-1">
+            <h4>OVER 15 YEARS EXPERIENCE</h4>
+            <p>Morbi nulla tortor, dignissim est node cursus euismod est arcu. Nomad at vehicula novum justo magna.</p>
+            </div>
+          </li>
+          <li >
+            <div class="sl-large-eco">
+              <h4>BEST MATERIALS</h4>
+              <p>Morbi nulla tortor, dignissim est node cursus euismod est arcu. Nomad at vehicula novum justo magna.</p>
+            </div>
+            </li>
+            <li >
+                <div class="sl-large-garage">
+                <div>
+                <h4>PROFESSIONAL STANDARDS </h4>
+                <p>Morbi nulla tortor, dignissim est node cursus euismod est arcu. Nomad at vehicula novum justo magna.</p>
+              </div>
+              </div>
+              
+              </li>
         </ul>
       </section>
     </main>
